# 2d-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Task1  buff  buffer  buffer2  cmake_install.cmake
assets/map/: maze.txt  room_A.txt  room_B.txt  room_C.txt  room_in.txt  room_out.txt
src/: Animator.cpp  Animator.hpp  BaseObject.cpp  BaseObject.hpp  BaseSpriteOrderer.hpp  Camera.cpp  Camera.hpp  ControlledObject.cpp  ControlledObject.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  Label.cpp  Label.hpp  LoosingDoor.cpp  LoosingDoor.hpp  MathUtils.cpp  MazeLoader.cpp  ObjectPool.cpp  ObjectPool.hpp  OpenGL.cpp  OpenGL.hpp  OpenglObject.cpp  OpenglObject.hpp  OpenglUtils.cpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp  SpriteOrderer.cpp  SpriteOrderer.hpp  TextLib.cpp  TextLib.hpp  Tile.cpp  Tile.hpp  UiElement.cpp  UiElement.hpp  (+11 more)
